# ods_MTS_RecSys_Challenge_solution

./: .env.example  .gitignore  Kion_EDA_for_paper.ipynb  Makefile  README.md  boosting_train.py  docker-compose.yaml  full_solution.sh  get_data.sh  implicit_scores.py  preprocess.py  pyproject.toml  recsys_toolkit.py  requirements.txt  setup.cfg  submit_prediction.py
.github/workflows/: super-linter.yml
Docker/mlflow_image/: Dockerfile
Docker/model_service/: Dockerfile
notebooks/: Kion_EDA.ipynb
src/app_backend/: app.py
src/app_ui/: ui.py
src/data/: featurize.py  get_data.sh  preprocess.py
src/features/: add_item_stats.py  add_user_stats.py  common.py
src/models/: boosting_train.py  implicit_scores.py  prepare_submission.py  recsys_toolkit.py  submit_prediction.py  train_config.py  train_first_stage.py  train_second_stage.py
workflow/: Snakefile
